--- a/main/MiAICR.apk/res/values-hr/strings.xml
+++ b/main/MiAICR.apk/res/values-hr/strings.xml
@@ -45,6 +45,10 @@
   <string name="about_MiAI_engine_hyper">O Xiaomi HyperAI Engineu</string>
   <string name="accessbility_permission_title">Preuzete aplikacije</string>
   <string name="accessbility_permission_toast_msg">"Uključite značajke pristupačnosti Xiaomi HyperAI Enginea da biste mogli izvršiti ovu radnju"</string>
+  <string name="accessibility_sliding_button_state_description_off">Isključeno</string> 
+  <string name="accessibility_sliding_button_state_description_on">Uključeno</string> 
+  <string name="accessibility_tab_state_description_unselect">Nije odabrano</string> 
+  <string name="accessibility_tab_statedesc_unselect">Nije odabrano</string>
   <string name="actionbar_button_up_description">Natrag</string>
   <string name="aiSearch_buildDB_dialog_analysis_completed_progress_time">%1$s dovršeno</string>
   <string name="aiSearch_buildDB_dialog_analysis_completed_progress_time_notice">%1$s dovršeno. Vaš se uređaj može zagrijati ili potrošiti malo više energije tijekom ovog procesa.</string>
@@ -115,6 +119,49 @@
   <string name="aiSearch_privacy_dialog_permission_desc_user_notice_hyper">Xiaomi HyperAI Engine pruža mogućnosti pretraživanja na prirodnom jeziku za neke aplikacije. Prihvatite Pravila o privatnosti Xiaomi HyperAI Enginea kako biste mogli koristiti ove značajke.</string>
   <string name="aiSearch_privacy_dialog_permission_title_data_to_cloud">Prenesi osobne podatke u oblak</string>
   <string name="aiSearch_privacy_dialog_permission_title_user_notice">Uvjeti i odredbe</string>
+  <string name="aiSearch_support_service_search_global">Tražilica aplikacija</string>
+  <string name="aireco_app_name">Mi AI prijedlozi</string>
+  <string name="aireco_comm_attendance_title">Prijavi se</string>
+  <string name="aireco_comm_cancel">Odustani</string>
+  <string name="aireco_comm_confirm">U redu</string>
+  <string name="aireco_comm_download_to_install">Instaliraj</string>
+  <string name="aireco_comm_install">Instaliraj</string>
+  <string name="aireco_comm_install_weather_text">Instaliraj Smart home</string>
+  <string name="aireco_comm_iot_title">Smart home</string>
+  <string name="aireco_comm_menstrual_please_install_health">Instalirajte Mi Fitness da biste uključili cikluse.</string>
+  <string name="aireco_comm_please_install_alipay">Instalirajte Alipay da biste mogli koristiti \"%s\".</string>
+  <string name="aireco_comm_please_install_wallet">Instalirajte Mi Wallet kako biste mogli koristiti %s.</string>
+  <string name="aireco_feature_dialog_app_upgrade_message_template">Ažurirajte %1$s kako biste mogli koristiti %2$s.</string>
+  <string name="aireco_feature_dialog_app_upgrade_title">Ažuriraj</string>
+  <string name="aireco_page_metro_code_app_select_default_config">Neka Mi AI odabere najbolju aplikaciju za vas</string>
+  <string name="aireco_page_metro_code_app_select_more">Više aplikacija na ovom uređaju</string>
+  <string name="aireco_page_metro_code_app_select_other">Ostale aplikacije</string>
+  <string name="aireco_page_metro_code_app_select_title">Odaberite aplikaciju</string>
+  <string name="aireco_page_metro_code_app_smart_select">Smart</string>
+  <string name="copy_direct_button_address_preferred_app">Preferirana aplikacija</string>
+  <string name="copy_direct_button_address_preferred_app_baidu">Baidu</string>
+  <string name="copy_direct_button_address_preferred_app_gaode">Karta</string>
+  <string name="copy_direct_button_address_preferred_app_prompt">Odaberite svoju preferiranu aplikaciju za navigaciju</string>
+  <string name="copy_direct_button_address_service">Preuzmite usluge navigacije</string>
+  <string name="copy_direct_button_password">Kopiraj kod za dijeljenje</string>
+  <string name="copy_direct_button_password_prompt">Podržane aplikacije</string>
+  <string name="copy_direct_button_password_service">Provjerite detalje o proizvodu, prijenose uživo, videozapise i više</string>
+  <string name="copy_direct_button_select__close">Isključeno</string>
+  <string name="copy_direct_button_select_open">Uključeno</string>
+  <string name="copy_direct_button_support_app">Podržane aplikacije</string>
+  <string name="copy_direct_button_tracking_number">Kopiraj broj za praćenje</string>
+  <string name="copy_direct_button_tracking_number_service">Dobij praćenje narudžbe i informacije</string>
+  <string name="copy_direct_icon_address_content">Idi na: %1$s</string>
+  <string name="copy_direct_icon_default_content">Prepoznat je prečac međuspremnika. Dodirnite za prikaz u aplikaciji.</string>
+  <string name="copy_direct_icon_express_content">Dostava: %1$s</string>
+  <string name="copy_direct_icon_open">Otvoreno%1$s</string>
+  <string name="copy_direct_permission_default_desc_confirm">Shvaćam</string>
+  <string name="copy_direct_permission_default_desc_recognize">"Kada kopirate sadržaj, prečac međuspremnika identificirat će relevantne usluge i otvoriti prečac. "</string>
+  <string name="copy_direct_permission_default_desc_recognize1">"Ako vam ova usluga nije potrebna, možete je isključiti u Postavkama."</string>
+  <string name="copy_direct_permission_default_desc_setting">Postavke</string>
+  <string name="copy_direct_setting_button_desc">Dobijte usluge u plutajućim prozorima na temelju kopiranog sadržaja</string>
+  <string name="copy_direct_setting_prompt">Opcije</string>
+  <string name="copy_direct_setting_title">Prečac za međuspremnik</string>
   <string name="aireco_comm_reject">Ne sada</string>
   <string name="aireco_comm_to_setting">Postavke</string>
   <string name="aireco_intent_dialog_app_update_button_no">Ne sada</string>
@@ -460,6 +507,9 @@
   <string name="friday_shortest">Pet</string>
   <string name="icon_content_description">Ikona dijaloga</string>
   <string name="item_view_role_description">Kartica</string>
+  <string name="maml_power_bank_titleName">Slaba baterija Pronađite obližnje power bankove</string>
+  <string name="maml_power_save_titleName">Slaba baterija Uključite uštedu baterije</string>
+  <string name="maml_power_save_titleName2">Štednja baterije je uključena</string>
   <string name="material_clock_toggle_content_description">Odaberite prijepodne ili poslijepodne</string>
   <string name="material_hour_24h_suffix">%1$s sati</string>
   <string name="material_hour_selection">Odaberite sat</string>
@@ -482,6 +532,23 @@
   <string name="miai_authorization_micophone_dia_subtitle">Dopustite ovoj aplikaciji pristup mikrofonu kako bi pokrenula automatizaciju i uzorke.</string>
   <string name="miuix_access_state_desc">Odabrano</string>
   <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
+  <string name="miuix_accessibility_title">Naslov</string>
+  <string name="miuix_appcompat_accessibility_collapse_state">Sažet</string>
+  <string name="miuix_appcompat_accessibility_expand_state">Prošireno</string>
+  <string name="miuix_appcompat_accessibility_finish_edit_action_mode">Izlaz iz načina uređivanja</string>
+  <string name="miuix_appcompat_accessibility_new_message">Nova obavijest</string>
+  <string name="miuix_appcompat_accessibility_start_edit_action_mode">Ulazak u način uređivanja</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_close">Prijeđite prstom prema dolje za zatvaranje</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_half_screen">Prijeđite prstom prema dolje za prelazak na pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_down_to_minimized">Privucite prstom prema dolje za minimiziranje</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_up_to_half_screen">Privucite prstom prema gore za prebacivanje na pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_scroll_up_to_maximized">Privucite prstom prema gore za maksimiziranje</string>
+  <string name="miuix_bottom_sheet_accessibility_state_half_screen">Pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_state_maximized">Maksimizirano</string>
+  <string name="miuix_bottom_sheet_accessibility_state_minimized">Minimizirano</string>
+  <string name="miuix_bottom_sheet_accessibility_switch_to_half_screen">Prebacivanje na pola zaslona</string>
+  <string name="miuix_bottom_sheet_accessibility_switch_to_maximized">Maksimiziraj</string>
+  <string name="miuix_bottom_sheet_accessibility_switch_to_minimized">Minimiziraj</string>
   <string name="miuix_appcompat_action_mode_deselect_all">Poništi odabir</string>
   <string name="miuix_appcompat_action_mode_select_all">Odaberi sve</string>
   <string name="miuix_appcompat_action_mode_title_empty">Odaberi stavke</string>
@@ -504,6 +571,11 @@
   <string name="miuix_appcompat_show_dialog_description">Skočni prozor</string>
   <string name="miuix_indexer_collect">Zbirke</string>
   <string name="miuix_indexer_selected">Odabrano %s</string>
+  <string name="miuix_pairing_dialog_closable_icon_description">Zatvori</string>
+  <string name="miuix_progressbar_loading">Samo trenutak…</string>
+  <string name="miuix_show_password">Prikaži zaporku</string>
+  <string name="miuix_stretchablewidget_collapsed">Sažeto</string>
+  <string name="miuix_stretchablewidget_expanded">Prošireno</string>
   <string name="miuix_popup_window_default_title">Skočni prozor</string>
   <string name="miuix_sbl_tracking_progress_labe_pull_to_refresh">Povuci za osvježiti</string>
   <string name="miuix_sbl_tracking_progress_labe_refreshed">Gotovo</string>
@@ -725,6 +797,10 @@
   <string name="passport_qq_login_btn_content_description">Prijavite se s QQ</string>
   <string name="passport_querying_phone_info">Traženje podataka o računu…</string>
   <string name="passport_quick_login_title">Unesite vašu zaporku</string>
+  <string name="pasport_register_dialog_message">Želite li sada izraditi Xiaomi račun putem svog telefonskog broja %s?</string>
+  <string name="passport_password_hide_show">Sakrij zaporku</string>
+  <string name="passport_register_dialog_positive">Izradi</string>
+  <string name="passport_register_dialog_title">Izradi Xiaomi račun</string>
   <string name="passport_reging">Izrada računa…</string>
   <string name="passport_register_by_local_phone_long_text">Izradi račun</string>
   <string name="passport_register_by_local_phone_short_text">Izradi račun</string>
