--- a/main/MiuiGallery.apk/res/values-hr/strings.xml
+++ b/main/MiuiGallery.apk/res/values-hr/strings.xml
@@ -850,6 +850,24 @@ Spojite punjač i isključite zaslon da se pojave uspomene."</string>
   <string name="continue_migration_msg">Neke od vaših fotografija i videozapisa prebačene su u Google fotografije. Nastavite prijenos sada kako ne biste izgubili ništa važno kada sinkronizacija s Xiaomi Cloudom više ne bude dostupna.</string>
   <string name="continue_migration_ok">Nastavi</string>
   <string name="continue_migration_title">Nastavak prijenosa</string>
+  <string name="common_google_play_services_enable_button">Omogući</string>
+  <string name="common_google_play_services_enable_text">"%1$s neće raditi ako ne omogućite Google Play usluge."</string>
+  <string name="common_google_play_services_enable_title">Omogući Google Play usluge</string>
+  <string name="common_google_play_services_install_button">Instaliraj</string>
+  <string name="common_google_play_services_install_text">"%1$s neće raditi bez Google Play usluga, koje nedostaju na vašem uređaju."</string>
+  <string name="common_google_play_services_install_title">Nabavite Google Play usluge</string>
+  <string name="common_google_play_services_notification_channel_name">Dostupnost Google Play usluga</string>
+  <string name="common_google_play_services_notification_ticker">Pogreška Usluga za Google Play</string>
+  <string name="common_google_play_services_unknown_issue">%1$s ima problema s uslugama Google Play. Pokušajte ponovno.</string>
+  <string name="common_google_play_services_unsupported_text">%1$s radi uz pomoć Google Play usluge koje vaš uređaj ne podržava. Za pomoć se obratite proizvođaču.</string>
+  <string name="common_google_play_services_update_button">Ažuriranje</string>
+  <string name="common_google_play_services_update_text">%1$s neće funkcionirati ako ne ažurirate Google Play usluge.</string>
+  <string name="common_google_play_services_update_title">Ažuriraj usluge za Google Play</string>
+  <string name="common_google_play_services_updating_text">%1$s neće funkcionirati bez Google Play usluga koje se trenutačno ažuriraju.</string>
+  <string name="common_google_play_services_wear_update_text">Potrebna je nova verzija usluga Google Play. Uskoro će se ažurirati.</string>
+  <string name="common_open_on_phone">Otvori na telefonu</string>
+  <string name="common_signin_button_text">Prijava</string>
+  <string name="common_signin_button_text_long">Prijava uslugom Google</string>
   <string name="compact">Kompaktno</string>
   <string name="confirm_no_name_people_merge_tip">Nakon što spojite fotografije ove dvije osobe, bit će prepoznate kao ista osoba</string>
   <string name="copy">Kopiraj</string>
