--- a/main/subscreencenter.apk/res/values-hr/strings.xml
+++ b/main/subscreencenter.apk/res/values-hr/strings.xml
@@ -29,11 +29,15 @@
   <string name="actionbar_button_up_description">Natrag</string>
   <string name="app_name">Stražnji zaslon</string>
   <string name="assistant_demo_simple_tip">Obavijesti i prikvačene poruke</string>
+  <string name="clear_text_end_icon_content_description">Izbriši tekst</string>
   <string name="clearable_edittext_clear_description">Izbriši</string>
   <string name="close">Zatvori</string>
   <string name="copy">Kopiraj</string>
   <string name="date_time_picker_dialog_title">Postavi datum i vrijeme</string>
+  <string name="error_a11y_label">Pogreška: nevažeća</string>
+  <string name="error_icon_content_description">Pogreška</string>
   <string name="expand_button_title">Napredno</string>
+  <string name="exposed_dropdown_menu_content_description">Prikaži padajući izbornik</string>
   <string name="friday">Petak</string>
   <string name="friday_short">Pet</string>
   <string name="friday_shortest">P</string>
@@ -44,8 +48,22 @@
   <string name="guide_use_pin_summary">Koristite Xiaomi Hyper XiaoAi za zaokruživanje važnih informacija na prednjem zaslonu, a zatim ih pričvrstite na stražnji zaslon radi lakšeg snalaženja. Također radi za fotografije iz Galerije.</string>
   <string name="guide_use_pin_title">Prikvačena poruka</string>
   <string name="launch_camera_fail_tip">Otključaj uređaj nakon ponovnog pokretanja za korištenje kamere</string>
+  <string name="item_view_role_description">Kartica</string>
+  <string name="m3_loading_indicator_content_description">Učitavanje</string>
   <string name="main_panel_enter_edit_mode_desc">Uđi u način uređivanja</string>
   <string name="main_panel_exit_edit_mode_desc">Izlaz iz načina uređivanja</string>
+  <string name="material_clock_toggle_content_description">Odaberitete prijepodne ili poslijepodne</string>
+  <string name="material_hour_selection">Odaberitete sat</string>
+  <string name="material_hour_suffix">"%1$s sat"</string>
+  <string name="material_minute_selection">Odaberitete minute</string>
+  <string name="material_minute_suffix">%1$s minuta</string>
+  <string name="material_slider_range_end">Kraj raspona,</string>
+  <string name="material_slider_range_start">Početak raspona,</string>
+  <string name="material_timepicker_clock_mode_description">Prebacite se na način rada sata za unos vremena.</string>
+  <string name="material_timepicker_hour">Sat</string>
+  <string name="material_timepicker_minute">Minuta</string>
+  <string name="material_timepicker_select_time">Odaberitete vrijeme</string>
+  <string name="material_timepicker_text_input_mode_description">Prebacite se na način unosa teksta za unos vremena.</string>
   <string name="miuix_access_state_desc">Odabrano</string>
   <string name="miuix_accessibility_title">Naslov</string>
   <string name="miuix_alphabet_indexer_name">Traka indeksa</string>
@@ -155,7 +173,50 @@
   <string name="ms_travel_assistant">Putnički asistent</string>
   <string name="ms_travel_assistant_off">Isključeno</string>
   <string name="ms_travel_assistant_on">Uključeno</string> 
+  <string name="mtrl_checkbox_state_description_checked">Označeno</string>
+  <string name="mtrl_checkbox_state_description_indeterminate">Djelomično označeno</string>
+  <string name="mtrl_checkbox_state_description_unchecked">Nije označeno</string>
+  <string name="mtrl_chip_close_icon_content_description">Ukloni %1$s</string>
+  <string name="mtrl_picker_a11y_next_month">Prijelaz na sljedeći mjesec</string>
+  <string name="mtrl_picker_a11y_prev_month">Pomicanje na prethodni mjesec</string>
+  <string name="mtrl_picker_announce_current_selection">Trenutačan odabir: %1$s</string>
+  <string name="mtrl_picker_cancel">Odustani</string>
+  <string name="mtrl_picker_confirm">Spremi</string>
+  <string name="mtrl_picker_date_format">dd.MM.yyyy</string>
+  <string name="mtrl_picker_date_header_selected">%1$s</string>
+  <string name="mtrl_picker_date_header_title">Odaberitete datum</string>
+  <string name="mtrl_picker_date_header_unselected">Odabrani datum</string>
+  <string name="mtrl_picker_day_of_week_column_header">Stupac s danima: %1$s</string>
+  <string name="mtrl_picker_header_prompt">Odaberite datum</string>
+  <string name="mtrl_picker_header_selected">%1$s</string>
+  <string name="mtrl_picker_invalid_format">Nevažeći format.</string>
+  <string name="mtrl_picker_invalid_format_example">Primjer: %1$s</string>
+  <string name="mtrl_picker_invalid_format_use">Koristi format: %1$s</string>
+  <string name="mtrl_picker_invalid_range">Raspon nije važeći.</string>
+  <string name="mtrl_picker_navigate_to_year_description">Prijelaz na godinu %1$s</string>
+  <string name="mtrl_picker_out_of_range">Izvan raspona: %1$s</string>
+  <string name="mtrl_picker_range_header_only_end_selected">Datum početka – %1$s</string>
+  <string name="mtrl_picker_range_header_only_start_selected">%1$s – datum završetka</string>
+  <string name="mtrl_picker_range_header_prompt">Odaberitete raspon datuma</string>
+  <string name="mtrl_picker_range_header_selected">%1$s - %2$s</string>
+  <string name="mtrl_picker_range_header_title">Odaberitete raspon</string>
+  <string name="mtrl_picker_range_header_unselected">Datum početka – datum završetka</string>
+  <string name="mtrl_picker_save">Spremi</string>
+  <string name="mtrl_picker_text_input_date_hint">Datum</string>
+  <string name="mtrl_picker_text_input_date_range_end_hint">Datum završetka</string>
+  <string name="mtrl_picker_text_input_date_range_start_hint">Datum početka</string>
+  <string name="mtrl_picker_text_input_day_abbr">d</string>
+  <string name="mtrl_picker_text_input_month_abbr">m</string>
+  <string name="mtrl_picker_text_input_year_abbr">g</string>
+  <string name="mtrl_picker_toggle_to_calendar_input_mode">Prijelaz na način unosa u Kalendaru</string>
+  <string name="mtrl_picker_toggle_to_day_selection">Dodirnite za prijelaz na odabir dana</string>
+  <string name="mtrl_picker_toggle_to_text_input_mode">Prijelaz na način unosa teksta</string>
+  <string name="mtrl_picker_toggle_to_year_selection">Dodirnite za prijelaz na odabir godine</string>
+  <string name="mtrl_timepicker_confirm">U redu</string>
+  <string name="nav_rail_collapsed_a11y_label">Sažeto</string>
+  <string name="nav_rail_expanded_a11y_label">Prošireno</string>
   <string name="not_set">Nije postavljeno</string>
+  <string name="password_toggle_content_description">Prikaži zaporku</string>
   <string name="pin_delete_button_desc">Izbriši</string> 
   <string name="pin_delete_cancel">Otkaži</string>
   <string name="pin_delete_confirm">Izbriši</string> 
